# copilot-session-1

./: .gitignore  DESIGN.md  README.md
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
