[project]
name = "backend-jwt"
version = "0.1.0"
description = "FastAPI JWT backend"
authors = [
    {name = "copilot",email = "copilot@example.com"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi>=0.136.3,<0.137.0",
    "uvicorn[standard]>=0.48.0,<0.49.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=3.2,<4.0"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
